--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <h1>Tic Tac Toe</h1>
 
-      <p>This is a lovely little tic tac toe gome, it doesnt actually do anything yet but just you wait! Soon itll have all sorts of features and bugs.</p>
+      <p>This is a lovely little tic tac toe game, it doesnt actually do anything yet but just you wait! Soon itll have all sorts of features and bugs.</p>
 
       <div class="container">
         <div class="row">
