--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
       <div class="container">
         <div class="row">
-          <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-          <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-          <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
        <div class="row">
+         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
          <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
        <div class="row">
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
       </div>
 
