--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
       <div class="container">
         <div class="row">
-          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-          <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item" id="r1c1"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item" id="r1c2"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+          <div class="item" id="r1c3"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
        <div class="row">
-         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="/assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r2c1"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r2c2"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r2c3"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
        <div class="row">
-         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
-         <div class="item"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r3c1"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r3c2"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
+         <div class="item" id="r3c3"><img src="./assets/images/Lily_Pad.png" alt="Lillypad" name="Lillypad"></div>
        </div>
       </div>
 
