--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body class="container-fluid">
 
-      <img class= "welcome" name= "welcome" src="/assets/images/Welcome!.jpg" alt="Welcome-Banner">
+      <img class= "welcome" name= "welcome" src="./assets/images/Welcome!.jpg" alt="Welcome-Banner">
 
       <h1>Tic Tac Toe</h1>
 
@@ -23,19 +23,19 @@
 
       <div class="container">
         <div class="row">
-          <div class="item col-xs-4 box" id="r1c1">.</div>
-          <div class="item col-xs-4 box" id="r1c2">.</div>
-          <div class="item col-xs-4 box" id="r1c3">.</div>
+          <div class="item col-xs-4 box" id="1">.</div>
+          <div class="item col-xs-4 box" id="2">.</div>
+          <div class="item col-xs-4 box" id="3">.</div>
        </div>
        <div class="row">
-         <div class="item col-xs-4 box" id="r2c1">.</div>
-         <div class="item col-xs-4 box" id="r2c2">.</div>
-         <div class="item col-xs-4 box" id="r2c3">.</div>
+         <div class="item col-xs-4 box" id="4">.</div>
+         <div class="item col-xs-4 box" id="5">.</div>
+         <div class="item col-xs-4 box" id="6">.</div>
        </div>
        <div class="row">
-         <div class="item col-xs-4 box" id="r3c1">.</div>
-         <div class="item col-xs-4 box" id="r3c2">.</div>
-         <div class="item col-xs-4 box" id="r3c3">.</div>
+         <div class="item col-xs-4 box" id="7">.</div>
+         <div class="item col-xs-4 box" id="8">.</div>
+         <div class="item col-xs-4 box" id="9">.</div>
        </div>
       </div>
 
