Final Game Logic
Got my game fully functional! You can now play Tic Tac Toe!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <h1>Tic Tac Toe</h1>
 
       <p>This is a lovely little tic tac toe game, it doesnt actually do anything yet but just you wait! Soon itll have all sorts of features and bugs.</p>
-
+      <button type="reset">New Game</button>
+      <p id="message">I Give You Game Information!</p>
       <div class="container">
         <div class="row">
           <div class="item col-xs-4 box" id="1">.</div>
