Modified the IMG path
Welcome IMG path modified.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <body class="container-fluid">
 
-      <img class= "welcome" name= "welcome" src="./assets/images/Welcome!.jpg" alt="Welcome-Banner">
+      <img class= "welcome" name= "welcome" alt="Welcome" src="http://i.imgur.com/RziKGaN.jpg">
 
       <h1>Tic Tac Toe</h1>
 
-      <p>This is a lovely little tic tac toe game, it doesnt actually do anything yet but just you wait! Soon itll have all sorts of features and bugs.</p>
+      <p>Welcome to my Tic Tac Toe Game! The rules are pretty simple, X goes first then O. All you need to do to begin is hit the New Game button! Feel free to sign in to save your game and log your wins!</p>
 
       <div>
         <form id="sign-up">
@@ -47,7 +47,7 @@
       <div>
         <form id="change-password">
           <fieldset>
-            <legend>Login Below</legend>
+            <legend>Change Password Below</legend>
             <input type="password" name="credentials[password]" placeholder="Old Password">
             <input type="password" name="credentials[password]" placeholder="New Password">
             <input type="submit" name="submit" value="Submit Changes">
@@ -55,7 +55,6 @@
         </form>
       </div>
 
-      <button type="reset">New Game</button>
       <p id="message">I Give You Game Information!</p>
 
       <div class="container">
@@ -75,6 +74,7 @@
          <div class="item col-xs-4 box" id="9">.</div>
        </div>
       </div>
-
+        <button type="reset">New Game</button>
     </body>
+
 </html>
