Trying to get saved games when your logged in
API work and saving games

--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
        </div>
       </div>
         <button id="reset" type="reset">New Game</button>
+
+        <!-- <div>
+          <form id="get-game">
+            <fieldset>
+              <legend>Load A Game</legend>
+              <input type="text" name="credentials[email]" placeholder="Email">
+              <input type="submit" name="Game Id" value="Get Game!">
+            </fieldset>
+          </form>
+        </div> -->
+
     </body>
 
 </html>
