Got API GET/PATCH/POST working!!!
I can now GET/PATCH/POST game state info

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
             </fieldset>
           </form>
         </div> -->
-
+      <div>
+        <button id="getHistory">Get History</button>
+        <p class="oldGames"> Have You Played Games Before? </p>
+      </div>
     </body>
 
 </html>
