Made my img https
instead of http

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body class="container-fluid">
 
-      <img class= "welcome" name= "welcome" alt="Welcome" src="http://i.imgur.com/RziKGaN.jpg">
+      <img class= "welcome" name= "welcome" alt="Welcome" src="https://i.imgur.com/RziKGaN.jpg">
 
       <h1>Tic Tac Toe</h1>
 
